docs(readme): update loader support and dynamic JVM GC presets
- Highlight support for NeoForge and Quilt loaders across feature descriptions.
- Document dynamic JVM garbage collection presets, distinguishing Generational ZGC for Java 21+ and Aikar's G1GC for Java 8–17.